--- a/envoy.yaml
+++ b/envoy.yaml
@@ -60,7 +60,7 @@ static_resources:
                         function envoy_on_request(request_handle)
                           local meta = request_handle:streamInfo():dynamicMetadata()
                           for _, value in pairs(meta) do
-                            request_handle:headers():add("x-miza-user", value.jwt_payload.email)
+                            request_handle:headers():add("x-miza-namespace", value.jwt_payload.email)
                           end
                         end
                   - name: envoy.filters.http.router
