--- a/envoy.yaml
+++ b/envoy.yaml
@@ -32,6 +32,13 @@ static_resources:
                                 regex: ^/miza-todos(/.*)$
                               substitution: \1
                             cluster: miza-todos
+                      cors:
+                        allow_origin_string_match:
+                          - prefix: "*"
+                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
+                        allow_headers: authorization,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
+                        max_age: "1728000"
+                        expose_headers: grpc-status,grpc-message
                 http_filters:
                   - name: envoy.filters.http.jwt_authn
                     typed_config:
@@ -65,21 +72,19 @@ static_resources:
                             request_handle:headers():add("x-miza-namespace", value.jwt_payload.email)
                           end
                         end
-                  - name: envoy.filters.http.router
+                  - name: envoy.cors
+                  - name: envoy.grpc_web
+                  - name: envoy.router
   clusters:
     - name: miza-todos
       connect_timeout: 0.25s
-      type: STATIC
-      lb_policy: ROUND_ROBIN
-      load_assignment:
-        cluster_name: miza-todos
-        endpoints:
-          - lb_endpoints:
-              - endpoint:
-                  address:
-                    socket_address:
-                      address: 127.0.0.1
-                      port_value: 8080
+      type: logical_dns
+      http2_protocol_options: {}
+      lb_policy: round_robin
+      hosts:
+        - socket_address:
+            address: localhost
+            port_value: 3069
     - name: google-jwks
       connect_timeout: 0.25s
       type: LOGICAL_DNS
